samples/_failures_safe/1761162696_a0dca7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_786a9533.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_786a9533.c:140:9: error: expected expression at end of input
  140 |         entries[i].level[
      |         ^~~~~~~
./samples/SAFE/__tmp_786a9533.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_786a9533.c:140:9: error: expected declaration or statement at end of input
